--- a/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_WebShopLayout.cshtml
+++ b/DeveloperDOtnetStoreProject/DeveloperDOtnetStoreProject/Views/Shared/_WebShopLayout.cshtml
@@ -44,8 +44,8 @@
                         <div class="hidden-xs hidden-sm col-sm-8 col-md-pull-4">
                             <div class="search">
                                 <div class="col-lg-6 pull-right">
-                                    @using(Html.BeginForm("Index","~/Product")) {
-                                            <input type="text" name="searchProduct" class="form-control bottomPlaced" placeholder="Søg i DDOS">
+                                    @using(Html.BeginForm("Index","Product")) {
+                                            <input type="text" name="searchProduct" class="form-control bottomPlaced" placeholder="Søg i DDOS"> 
                                             <span class="input-group-btn bottomPlaced">
                                                 <input type="submit" class="btn btn-default" value="Go!"/>
                                                 <!--<button class="btn btn-secondary" type="submit">Go!</button>-->
